--- a/blog/2016/02/2016-02-01.md
+++ b/blog/2016/02/2016-02-01.md
@@ -25,18 +25,16 @@ Intranett er satt opp til å bruke kompatibilitetsmodus. En grusom mulighet som 
 Vi har meldt det inn til IT og satser på at de finner en løsning.
 
 
-## web
-- hjelpetekster
-- visuelle forbedringer
-- oppsett av testside
-
-## moduler
-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppdaterte maler
-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) dokumentasjon av malkoder
-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppsett av data til maler
-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) test av malgenerering
-[laurentius](https://github.com/telemark/laurentius)
-[tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator)
-[tfk-buddy-api](https://github.com/telemark/tfk-buddy-api)
+## Oppsummering
+- [MinElev](https://github.com/telemark/minelev) hjelpetekster
+- [MinElev](https://github.com/telemark/minelev) visuelle forbedringer
+- [MinElev](https://github.com/telemark/minelev) oppsett av testside
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppdaterte maler
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) dokumentasjon av malkoder
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) oppsett av data til maler
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) test av malgenerering
+- [laurentius](https://github.com/telemark/laurentius) fungerende tester
+- [tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator) utvidelser
+- [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) oppdateringer
 
 [<- 29. januar 2016](../01/2016-01-29.md)  |  [Forsiden](../../index.md) [02. februar 2016 ->](2016-02-02.md)
