--- a/blog/2016/02/2016-02-02.md
+++ b/blog/2016/02/2016-02-02.md
@@ -18,14 +18,15 @@ MinElev kom litt videre på turen inn i går kveld og ikke minst på turen hjem 
 Vi offentliggjør adressen til testløsningen i kveld og det blir ganske spennende å se om det kommer tilbakemeldinger.
 Og ikke minst: Hvilke tilbakemeldinger vi får.
 
-Førstkommende fredag og påfølgende mandag skal vi ha nye testrunder, men da i smp grupper og med oss utviklere tilstede.
+Førstkommende fredag og påfølgende mandag skal vi ha nye testrunder, men da i små grupper og med oss utviklere tilstede.
 
 MinElev er nå strengt tatt ferdig. Det kommer kun til å bli gjort små justeringer der. Nå starter arbeidet med å få på plass alle småbitene i bakkant.
-Varselbrev skal produseres, distribueres og arkiveres. Dette er for vår del ganske kjente områder siden vi jobbet mye med dette i skoleskyssprosjektet.
+Varselbrev skal produseres, distribueres og arkiveres. 
+Dette er for vår del ganske kjente områder siden vi jobbet mye med dette i skoleskyssprosjektet.
 Likevel er det mange linjer kode som skal på plass så vi trenger tiden vi har til rådighet.
 
-## Web
-
-## Moduler
+## Oppsummering
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) flere steg lagt inn
+- [tfk-buddy-api](https://github.com/telemark/tfk-buddy-api) henter mer data, restrukturering av retur
 
 [<- 01. februar 2016](2016-02-01.md)  |  [Forsiden](../../index.md) [03. februar 2016 ->](2016-02-03.md)
