--- a/blog/2016/02/2016-02-03.md
+++ b/blog/2016/02/2016-02-03.md
@@ -1,5 +1,12 @@
 # 03. februar 2016
 
+Tilbake på kontoret i dag, men blir litt andre aktiviteter enn ren utvikling.
+
+Det blir et møte med [vavaen]() for å planlegge en presentasjon vi skal holde for lederteamet i Skien kommune førstkommende mandag. 
+Tenker å ta litt om skoleskyss og litt om MinElev.
+
+Det er statusmøte i prosjektgruppa for MinElev i dag også. Blir spennende å høre om det har kommet inn noen tilbakemeldinger 
+på løsningen som ble gjort tilgjengelig for alle lærere i går kveld.
 
 
 ## Oppsummering
