--- a/blog/2016/02/2016-02-03.md
+++ b/blog/2016/02/2016-02-03.md
@@ -2,7 +2,7 @@
 
 Tilbake på kontoret i dag, men blir litt andre aktiviteter enn ren utvikling.
 
-Det blir et møte med [vavaen]() for å planlegge en presentasjon vi skal holde for lederteamet i Skien kommune førstkommende mandag. 
+Det blir et møte med [vavaen](https://github.com/vavaen) for å planlegge en presentasjon vi skal holde for lederteamet i Skien kommune førstkommende mandag. 
 Tenker å ta litt om skoleskyss og litt om MinElev.
 
 Det er statusmøte i prosjektgruppa for MinElev i dag også. Blir spennende å høre om det har kommet inn noen tilbakemeldinger 
@@ -11,4 +11,4 @@ på løsningen som ble gjort tilgjengelig for alle lærere i går kveld.
 
 ## Oppsummering
 
-[<- 02. februar 2016](2016-02-02.md)  |  [Forsiden](../../index.md)
+[<- 02. februar 2016](2016-02-02.md)  |  [Forsiden](../../index.md) [04. februar 2016 ->](2016-02-04.md)
