--- a/blog/2016/02/2016-02.md
+++ b/blog/2016/02/2016-02.md
@@ -1,4 +1,5 @@
 # Februar 2016
+- [04. februar 2016](2016-02-04.md)
 - [03. februar 2016](2016-02-03.md)
 - [02. februar 2016](2016-02-02.md)
 - [01. februar 2016](2016-02-01.md)
