--- a/blog/2016/02/2016-02-04.md
+++ b/blog/2016/02/2016-02-04.md
@@ -1,5 +1,20 @@
 # 04. februar 2016
 
+Det ser ut til å bli mer tankearbeid enn koding for min del i dag.
+
+Den opprinnelige tanken var å en saksbehandlermodul som inneholdt Roy og Laurentius for distribisjon og arkivering.
+Etter en stund i grubleboksen ser jeg helt klare fordeler ved å holde disse totalt adskilt.
+Det vil f.eks. være tilfeller hvor man ikke skal innom Roy i det hele tatt. Det å skille disse helt fra hverandre mulliggjør også å kunne skalere de uavhengig av hverandre.
+Vi kan ha et helt korps av Roy som dirtibuerer for harde livet.
+
+Utfordringene nå er å bli enig med seg selv om man skal gjøre samme jobb flere ganger, eller kun 1 gang.
+Et eksempel: I skoleskyss slår vi opp mot Det sentrale folkeregisteret. Når vi så sender vedtak for distribusjon behøver vi strengt tatt ikke gjøre det oppslaget en gang til.
+Men, dersom vi velger å gjøre oppslaget enda en gang blir løsningene mer separert og man slipper utarbeide felles API.
+
+Valg, valg, valg
+
+![Tenk logisk xkcd!](http://imgs.xkcd.com/comics/think_logically.png)
+
 ## Oppsummering
 
 [<- 03. februar 2016](2016-02-03.md)  |  [Forsiden](../../index.md)
