--- a/blog/2016/02/2016-02-04.md
+++ b/blog/2016/02/2016-02-04.md
@@ -17,4 +17,4 @@ Valg, valg, valg
 
 ## Oppsummering
 
-[<- 03. februar 2016](2016-02-03.md)  |  [Forsiden](../../index.md)
+[<- 03. februar 2016](2016-02-03.md)  |  [Forsiden](../../index.md) [08. februar 2016 ->](2016-02-08.md)
