--- a/blog/2016/02/2016-02-08.md
+++ b/blog/2016/02/2016-02-08.md
@@ -1,5 +1,22 @@
 # 08. februar 2016
 
+I dag blir en spennende dag. I tillegg til den vanlige utviklingen skal tankegodset og arbeidet presenteres i litt andre former.
+
+I formiddag skal vi holde en presentasjon for Skien kommune.
+De vil høre litt om hvordan Telemark fylkeskommune praktiserer porteføljestyring for digitaliseringsprosjekter og hva vi har gjort og gjør rent praktisk.
+
+For min del vil det si at jeg snakker litt om utviklingsarbeidet vi gjorde rundt skoleskyss.
+I tillegg skal jeg snakke om louie/tfk-varsel/MinElev. Skal også vise frem grenssnittet for varsler (aka MinElev).
+Det er ikke sikkert presentasjonene gir så mye mening uten min fremføring ved siden av, men her er de nå.
+- [Skoleskyss](https://docs.google.com/presentation/d/19dQ7F2wYhs7Z5UF0Nefqh0stBhfxkvilyjN5_atpDTM/edit?usp=sharing)
+- [MinElev](https://docs.google.com/presentation/d/1pMtJVv-8S0yLdeNglalbZEMNj5FvLgA9F6XYgdeuftA/edit?usp=sharing)
+
+De skarpeste ser sikkert at det er litt gjenbruk av slides og det er poenget. Det skal vises at vi gjenbruker arbeidsmetoder og idéer i tillegg til moduler og tjenester.
+
+I ettermiddag blir det testing av MinElev sammen med 5 lærere fra ulike videregående skoler. Det blir den endelige testen på om denne delen av løsningen er klar for produksjon.
+Med litt flaks ender vi opp med kun minimale endringsønsker.
+
+
 ## Oppsummering
 
 [<- 04. februar 2016](2016-02-04.md)  |  [Forsiden](../../index.md)
