--- a/blog/2016/02/2016-02-08.md
+++ b/blog/2016/02/2016-02-08.md
@@ -19,4 +19,4 @@ Med litt flaks ender vi opp med kun minimale endringsønsker.
 
 ## Oppsummering
 
-[<- 04. februar 2016](2016-02-04.md)  |  [Forsiden](../../index.md)
+[<- 04. februar 2016](2016-02-04.md)  |  [Forsiden](../../index.md) [09. februar 2016 ->](2016-02-09.md)
