--- a/blog/2016/02/2016-02-09.md
+++ b/blog/2016/02/2016-02-09.md
@@ -1,5 +1,8 @@
 # 09. februar 2016
 
+Dagens mann er [Roy](https://github.com/telemark/roy). Dette er den viktigste biten som gjenstår for at [MinElev](https://github.com/telemark/minelev) skal kunne gå i produksjon.
+Roy skal håndtere distribusjonen av varsler så ting skal slås opp, sjekkes, pakkes og sendes.
+
 ## Oppsummering
 
 [<- 08. februar 2016](2016-02-08.md)  |  [Forsiden](../../index.md)
