--- a/blog/2016/02/2016-02-09.md
+++ b/blog/2016/02/2016-02-09.md
@@ -5,4 +5,4 @@ Roy skal håndtere distribusjonen av varsler så ting skal slås opp, sjekkes, p
 
 ## Oppsummering
 
-[<- 08. februar 2016](2016-02-08.md)  |  [Forsiden](../../index.md)
+[<- 08. februar 2016](2016-02-08.md)  |  [Forsiden](../../index.md) [10. februar 2016 ->](2016-02-10.md)
