--- a/blog/2016/02/2016-02.md
+++ b/blog/2016/02/2016-02.md
@@ -1,4 +1,5 @@
 # Februar 2016
+- [10. februar 2016](2016-02-10.md)
 - [09. februar 2016](2016-02-09.md)
 - [08. februar 2016](2016-02-08.md)
 - [04. februar 2016](2016-02-04.md)
