--- a/blog/2016/02/2016-02-08.md
+++ b/blog/2016/02/2016-02-08.md
@@ -16,7 +16,28 @@ De skarpeste ser sikkert at det er litt gjenbruk av slides og det er poenget. De
 I ettermiddag blir det testing av MinElev sammen med 5 lærere fra ulike videregående skoler. Det blir den endelige testen på om denne delen av løsningen er klar for produksjon.
 Med litt flaks ender vi opp med kun minimale endringsønsker.
 
+## Presentasjon
+Presentasjonen gikk strålende. Vi holdt på i 25 minutter og deretter ble det en runde med spørsmål.
+Det var tydelig at det slo an. Spørsmålene gikk på alt fra hvordan vi håndterer gevinstene til hvor mange utviklere vi var og hvor mye man egentlig sparer.
+
+Antallet utviklere er enkelt: Vi er 2. Vi kunne sikkert vært 10 i nåværende stund og fortsatt hatt nok å gjøre.
+Men, inngangen vår er å snu organisasjonen og bruke interne ressurser. Så langt har det gått bra.
+Finner vi flere utviklere hos oss er det mer enn velkommen.
+
+Når det gjelder hvor mye vi egentlig sparer varierer det selvsagt fra gang til gang. I forbindelse med varsler ligger volumet på 7500 utsendte varsler pr år.
+Rent tidsmessig antar vi at det går med ca 30 min manuelt arbeid pr varsel på de delene vi kan automatisere.
+3750 timer spart er mao potensialet. Prosjektet i seg selv er ganske lite. 16 arbeidsdager med 2 personer på fulltid.
+I tillegg en del som er innom i mindre skal. 360 - 400 timer å lage for å spare 3750 virker ganske greit :-)
+Neste år blir den totale besparelsen større. Dette er bare regnestykket for timer. Det er i tillegg en del kvalitetsgevinster å hente.
+
+## Testing, Testing, Testing
+
+
 
 ## Oppsummering
+- [MinELev](https://github.com/telemark/minelev)
+- [tfk-saksbehandling-queue-pull](https://github.com/telemark/tfk-saksbehandling-queue-pull)
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel)
+- [buddy-minelev-api]()
 
 [<- 04. februar 2016](2016-02-04.md)  |  [Forsiden](../../index.md) [09. februar 2016 ->](2016-02-09.md)
