--- a/blog/2016/02/2016-02-08.md
+++ b/blog/2016/02/2016-02-08.md
@@ -30,9 +30,30 @@ Rent tidsmessig antar vi at det går med ca 30 min manuelt arbeid pr varsel på 
 I tillegg en del som er innom i mindre skal. 360 - 400 timer å lage for å spare 3750 virker ganske greit :-)
 Neste år blir den totale besparelsen større. Dette er bare regnestykket for timer. Det er i tillegg en del kvalitetsgevinster å hente.
 
+## Turbohacking
+I timene før lærerene dukket opp til test ble det kodet så fort fingrene bar og enda litt til.
+Vi hadde lyst at de ulike statusene i loggen skulle endre seg slik de ville gjort i produksjon og da måtte flere biter på plass.
+I tillegg ønsket vi å vise frem hvordan varselbrevene ville se ut når de var generert og vips enda flere brikker i puslespillet.
+
+De siste linjene ble tastet inn kun få minutter før testen skulle starte. Da var en løsning for å hente jobber ut av køen på plass.
+Det samme var de delene av saksbehandlingsmodulen som genererer varselbrevene.
+
 ## Testing, Testing, Testing
+Oppskrift på vellykket testsesjon
+- 5 lærere
+- 2 utviklere
+- 1 prosjektleder
+- 1 tilskuer
+- 3 pizzaer
+- passe mengder sjokolade
 
+De likte funksjonaliteten og enkelheten. Det ble gode diskusjoner om mulige forbedringer.
+En del visuell og språklig rydding ble gjort der og da. Noen bugs ble oppdaget og lagt inn som issues på GitHub.
 
+Tiden gikk svært fort og da vi dro hjem for kvelden var det bra stemning. Etter at listen var gjennomgått erklærte vi webgrensesnittet for ferdig.
+Feil vil selvsagt bli rettet, men videre ønsker om forbedringer må dyttes til neste versjon eller helt til slutt.
+
+Nå har vi en backend som må på plass.
 
 ## Oppsummering
 - [MinELev](https://github.com/telemark/minelev)
