--- a/blog/2016/02/2016-02-10.md
+++ b/blog/2016/02/2016-02-10.md
@@ -2,4 +2,4 @@
 
 ## Oppsummering
 
-[<- 09. februar 2016](2016-02-09.md)  |  [Forsiden](../../index.md)
+[<- 09. februar 2016](2016-02-09.md)  |  [Forsiden](../../index.md) [12. februar 2016 ->](2016-02-12.md)
