--- a/blog/2016/02/2016-02-12.md
+++ b/blog/2016/02/2016-02-12.md
@@ -3,4 +3,4 @@
 
 ## Oppsummering
 
-[<- 10. februar 2016](2016-02-10.md)  |  [Forsiden](../../index.md)
+[<- 10. februar 2016](2016-02-10.md)  |  [Forsiden](../../index.md) [15. februar 2016 ->](2016-02-15.md)
