--- a/blog/2016/02/2016-02-15.md
+++ b/blog/2016/02/2016-02-15.md
@@ -1,6 +1,6 @@
-# 15. februar
+# 15. februar 2016
 
-En spennende uke for MinElev.
+En spennende uke for [MinElev](https://github.com/telemark/minelev).
 
 Vi starter opp med en pilotskole på onsdag og mandag etter vinterferien rulles det ut i produksjon for alle våre videregående skoler i Telemark.
 
@@ -9,8 +9,25 @@ Det skal informeres til lederteamet på pilotskolen. Samtidig skal også elever 
 Alle fagforeningene skal få informasjon.
 Vårt eget porteføljestyre skal også få en presentasjon.
 
+## MinElev forhåndsvisning
+Denne har bydd på noen utfordringer.
+Jeg er veldig glad i å ha kun en kilde til sannhet i hvert tilfelle. Slik løsningen var satt opp i starten var det
+laget en enkel forhåndsvisning i MinElev hvor man fikk se kun det man hadde krysset av for. En del tilbakemeldinger gikk
+på at man også ønsket å se en forhåndsvisning av selve brevet med logo, eventuelle lovtekster osv.
+Selve brevet blir generert i [saksbehandlermodulen](https://github.com/telemark/tfk-saksbehandling-elev-varsel) etter å ha blitt hentet ut av jobbkøen til MinElev. Derfor er det kun i 
+den modulen at malene ligger. Da det ble foreslått at man kunne legge malene inn i Fronter så lærere kunne se de og også andre steder 
+så måtte noe gjøres. En kilde til sannhet for enhver pris ;-)
 
+Løsningen ble å lage en egen modul for maler, [tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates), som brukes av saksbehandlermodulen og MinElev.
+Dermed får jeg viljen min når det gjelder å kun ha ett sted å vedlikeholder maler og man kan generere en helt reell forhåndsvisning i MinElev.
+Lager forhåndsvisning vha samme tjeneste som brukes av saksbehandlermodulen, nemlig [docxtemplater-webservice-docker](https://github.com/telemark/docxtemplater-webservice-docker)
 
 ## Oppsummering
+-[tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates) Opprettet
+-[tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates) Ferdigstilt og publisert til [npm](https://www.npmjs.com/package/tfk-saksbehandling-elev-varsel-templates)
+-[MinElev](https://github.com/telemark/minelev) Ny forhåndsvisning
+-[MinElev](https://github.com/telemark/minelev) Sperre på forhåndsvisning til alt er riktig utfylt
+-[MinElev](https://github.com/telemark/minelev) Oppdatert alle avhengigheter
+-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) Oppdatert til å bruke maler fra malmodulen
 
 [<- 12. februar 2016](2016-02-12.md)  |  [Forsiden](../../index.md)
