--- a/blog/2016/02/2016-02-12.md
+++ b/blog/2016/02/2016-02-12.md
@@ -1,6 +1,27 @@
 # 12. februar 2016
 
+Ikke akkurat en skjebnedag, men det er i dag kl 14 vi avgjør om vi er klare for å kjøre igang pilot av MinElev neste uke.
+For min del er det eneste jeg har behov for å få til en fullstendig gjenomgang av et varsel fra start til slutt.
+Det vil si:
+- Hentes ut av kø
+- Generere alle typer brev
+- Hente adresser mm fra folkeregisteret og 360
+- Sende varsel via SvarUt
+Det er også en arkiveringsdel inne i bildet her, men den er utenfor mitt ansvarsområde denne gang.
+I "min" del av arbeidsflyten skal det også sjekkes om det er hemmlig adresse, hvilke forelder som skal ha kopi osv. Men, de
+delene handler bare om sammenstilling av data og det er jeg trygg på at jeg klarer. Det som må testes er at vi har på plass alt
+rundt de eksterne tjenestene. Funker det er jeg klar til å gå i pilot.
+
+
 
 ## Oppsummering
+-[tfk-saksbehandling-queue-pull]()
+-[roy]()
+-[tfk-dsf-unwrap-parents]()
+-[tfk-dsf-unwrap-contact]()
+-[node-svarut]()
+-[tfk-arkiv-metadatagenerator]()
+-[buddy-minelev-api]()
+
 
 [<- 10. februar 2016](2016-02-10.md)  |  [Forsiden](../../index.md) [15. februar 2016 ->](2016-02-15.md)
