--- a/blog/2016/02/2016-02-09.md
+++ b/blog/2016/02/2016-02-09.md
@@ -3,6 +3,10 @@
 Dagens mann er [Roy](https://github.com/telemark/roy). Dette er den viktigste biten som gjenstår for at [MinElev](https://github.com/telemark/minelev) skal kunne gå i produksjon.
 Roy skal håndtere distribusjonen av varsler så ting skal slås opp, sjekkes, pakkes og sendes.
 
+## Hver modul sin egen tue
+Men, slik gikk det ikke. Det hører nesten til sjeldenhetene at dagene ender slik som først planlagt.
+
+
 ## Oppsummering
 
 [<- 08. februar 2016](2016-02-08.md)  |  [Forsiden](../../index.md) [10. februar 2016 ->](2016-02-10.md)
