--- a/blog/2016/02/2016-02-12.md
+++ b/blog/2016/02/2016-02-12.md
@@ -17,7 +17,9 @@ rundt de eksterne tjenestene. Funker det er jeg klar til å gå i pilot.
 ## Oppsummering
 -[tfk-saksbehandling-queue-pull]()
 -[roy]()
--[tfk-dsf-unwrap-parents]()
+- [tfk-dsf-unwrap-parents](https://github.com/telemark/tfk-dsf-unwrap-parents) opprettet
+- [tfk-dsf-unwrap-parents](https://github.com/telemark/tfk-dsf-unwrap-parents) ferdigstilt
+- [tfk-dsf-unwrap-parents](https://github.com/telemark/tfk-dsf-unwrap-parents) publisert til [npm](https://www.npmjs.com/package/tfk-dsf-unwrap-parents)
 -[tfk-dsf-unwrap-contact]()
 -[node-svarut]()
 -[tfk-arkiv-metadatagenerator]()
