--- a/blog/2016/02/2016-02-15.md
+++ b/blog/2016/02/2016-02-15.md
@@ -27,9 +27,15 @@ Lager forhåndsvisning vha samme tjeneste som brukes av saksbehandlermodulen, ne
 ## Oppsummering
 -[tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates) Opprettet
 -[tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates) Ferdigstilt og publisert til [npm](https://www.npmjs.com/package/tfk-saksbehandling-elev-varsel-templates)
+-[tfk-saksbehandling-elev-varsel-templates](https://github.com/telemark/tfk-saksbehandling-elev-varsel-templates) Oppdaterte maler
 -[MinElev](https://github.com/telemark/minelev) Ny forhåndsvisning
 -[MinElev](https://github.com/telemark/minelev) Sperre på forhåndsvisning til alt er riktig utfylt
 -[MinElev](https://github.com/telemark/minelev) Oppdatert alle avhengigheter
 -[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) Oppdatert til å bruke maler fra malmodulen
+-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) Oppdatert CALLBACK_STATUS_URL
+-[roy](https://github.com/telemark/roy) Finne foreldre
+-[roy](https://github.com/telemark/roy) Filtrere foreldre utfra status
+-[roy](https://github.com/telemark/roy) Finne foreldre med samme adresse
+-[roy](https://github.com/telemark/roy) Sette foreldre som kopi til svarut
 
 [<- 12. februar 2016](2016-02-12.md)  |  [Forsiden](../../index.md)
