--- a/blog/2016/02/2016-02-15.md
+++ b/blog/2016/02/2016-02-15.md
@@ -38,4 +38,4 @@ Lager forhåndsvisning vha samme tjeneste som brukes av saksbehandlermodulen, ne
 -[roy](https://github.com/telemark/roy) Finne foreldre med samme adresse
 -[roy](https://github.com/telemark/roy) Sette foreldre som kopi til svarut
 
-[<- 12. februar 2016](2016-02-12.md)  |  [Forsiden](../../index.md)
+[<- 12. februar 2016](2016-02-12.md)  |  [Forsiden](../../index.md) [16. februar 2016 ->](2016-02-16.md)
