--- a/blog/2016/02/2016-02-16.md
+++ b/blog/2016/02/2016-02-16.md
@@ -1,5 +1,16 @@
 # 16. februar 2016
 
+Siste finpuss for MinElev må på plass i dag. 
+I morgen tidlig starter piloten på en av de videregående skolene våre.
+Det vil si at et par ting _må_ være på plass. Resten kan komme når vi er igang.
+Håpet er at det som måtte finnes av feil og flaksehalser blir avdekket og fikset ila pilotoperioden.
+
 ## Oppsummering
+-[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact)
+-[tfk-laurentius](https://github.com/telemark/tfk-laurentius)
+-[tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator)
+-[node-p360](https://github.com/telemark/node-p360)
+-[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel)
+-[roy](https://github.com/telemark/roy)
 
 [<- 15. februar 2016](2016-02-15.md)  |  [Forsiden](../../index.md)
