--- a/blog/2016/02/2016-02-16.md
+++ b/blog/2016/02/2016-02-16.md
@@ -6,7 +6,8 @@ Det vil si at et par ting _må_ være på plass. Resten kan komme når vi er iga
 Håpet er at det som måtte finnes av feil og flaksehalser blir avdekket og fikset ila pilotoperioden.
 
 ## Oppsummering
--[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact)
+-[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact) Ferdigstilt
+-[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact) Publisert til [npm](https://www.npmjs.com/package/tfk-dsf-normalize-contact)
 -[tfk-laurentius](https://github.com/telemark/tfk-laurentius)
 -[tfk-arkiv-metadatagenerator](https://github.com/telemark/tfk-arkiv-metadatagenerator)
 -[node-p360](https://github.com/telemark/node-p360)
