--- a/blog/2016/02/2016-02-16.md
+++ b/blog/2016/02/2016-02-16.md
@@ -5,6 +5,29 @@ I morgen tidlig starter piloten på en av de videregående skolene våre.
 Det vil si at et par ting _må_ være på plass. Resten kan komme når vi er igang.
 Håpet er at det som måtte finnes av feil og flaksehalser blir avdekket og fikset ila pilotoperioden.
 
+## Helomvending
+Vi har hele tiden jobbet mot å få til helt separate jobber. Etter lunch i dag måtte vi snu.
+
+For å få alle dokumenter helt riktig inn i sak/arkiv systemet er vi nødt til å la det være siste ledd i kjeden.
+I alle fall til vi evt sitter på en webservice som lar oss gjøre det vi ønsker.
+
+Det ble en del endring av logikk og flytting av filer, men alt i alt ble det ganske så bra.
+
+Kjeden nå er da
+- [tfk-saksbehandling-queue-pull](https://github.com/telemark/tfk-saksbehandling-queue-pull) Henter jobber fra MinElev
+- [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) Genererer varsler og setter opp data for arkiv og distribusjon
+- [roy](https://github.com/telemark/roy) Slår opp i folkeregisteret mm sender varsel via SvarUt om mulig
+- [tfk-laurentius](https://github.com/telemark/tfk-laurentius) Arkiverer varsel og sender evt notat om det må disrtibueres manuelt
+
+Av disse er det kun [tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel) som er tilpasset dette prosjektet.
+De andre kan brukes mot hva som helst. Jeg antar at når skoleskyss plukkes frem igjen vil vi lage en ny saksbehandlermodul for den som bruker dette 
+oppsettet i stedet.
+
+## Stille før stormen
+Mot slutten av dagen i dag ble linken til MinElev lagt ut på Fronter for pilotskolen.
+I morgen tidlig tar vi siste sjekk av modulene før vi setter igang maskineriet.
+Først en etter en startet manuelt og etterhvert forhåpentligvis mer og mer automatikk.
+
 ## Oppsummering
 -[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact) Ferdigstilt
 -[tfk-dsf-normalize-contact](https://github.com/telemark/tfk-dsf-normalize-contact) Publisert til [npm](https://www.npmjs.com/package/tfk-dsf-normalize-contact)
@@ -13,5 +36,9 @@ Håpet er at det som måtte finnes av feil og flaksehalser blir avdekket og fiks
 -[node-p360](https://github.com/telemark/node-p360)
 -[tfk-saksbehandling-elev-varsel](https://github.com/telemark/tfk-saksbehandling-elev-varsel)
 -[roy](https://github.com/telemark/roy)
+-[tfk-saksbehandling-queue-pull](https://github.com/telemark/tfk-saksbehandling-queue-pull) Endret måten CALLBACK_STATUS_URL funker på
+-[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) Opprettet
+-[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) Ferdigstilt
+-[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) Publisert til npm
 
 [<- 15. februar 2016](2016-02-15.md)  |  [Forsiden](../../index.md)
