--- a/blog/2016/02/2016-02-16.md
+++ b/blog/2016/02/2016-02-16.md
@@ -41,4 +41,4 @@ Først en etter en startet manuelt og etterhvert forhåpentligvis mer og mer aut
 -[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) Ferdigstilt
 -[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) Publisert til npm
 
-[<- 15. februar 2016](2016-02-15.md)  |  [Forsiden](../../index.md)
+[<- 15. februar 2016](2016-02-15.md)  |  [Forsiden](../../index.md) [17. februar 2016 ->](2016-02-17.md)
