--- a/blog/2016/02/2016-02-17.md
+++ b/blog/2016/02/2016-02-17.md
@@ -1,5 +1,9 @@
 # 17. februar 2016
 
 ## Oppsummering
+-[MinElev](https://github.com/telemark/minelev) Detaljerte logger for enkeltelever
+-[MinElev](https://github.com/telemark/minelev) Link til detaljert logg fra forsiden
+-[MinElev](https://github.com/telemark/minelev) Full statushistorikk på detaljloggen
+-[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) E-post og telefonnummer lagt inn
 
 [<- 16. februar 2016](2016-02-16.md)  |  [Forsiden](../../index.md)
