--- a/blog/2016/02/2016-02-17.md
+++ b/blog/2016/02/2016-02-17.md
@@ -6,4 +6,4 @@
 -[MinElev](https://github.com/telemark/minelev) Full statushistorikk på detaljloggen
 -[tfk-saksbehandling-schools-info](https://github.com/telemark/tfk-saksbehandling-schools-info) E-post og telefonnummer lagt inn
 
-[<- 16. februar 2016](2016-02-16.md)  |  [Forsiden](../../index.md)
+[<- 16. februar 2016](2016-02-16.md)  |  [Forsiden](../../index.md) [18. februar 2016 ->](2016-02-18.md)
