--- a/blog/2016/02/2016-02.md
+++ b/blog/2016/02/2016-02.md
@@ -1,4 +1,6 @@
 # Februar 2016
+- [19. februar 2016](2016-02-19.md)
+- [18. februar 2016](2016-02-18.md)
 - [17. februar 2016](2016-02-17.md)
 - [16. februar 2016](2016-02-16.md)
 - [15. februar 2016](2016-02-15.md)
