--- a/blog/2016/02/2016-02-19.md
+++ b/blog/2016/02/2016-02-19.md
@@ -1,5 +1,31 @@
 # 19. februar 2016
 
+Siste dag av piloten for [MinElev]() og alt tikker og går som det skal fra vår side.
+Ved opptelling etter lunch i dag var 106 varsler sendt ut og over 60% var så langt lest digital hos AltInn.
+Siste finpuss på hjelpetekster og små visuelle tilbakemeldinger ble gjort på grensesnittet.
+Vi mener vi nå er klare til å gå i full produksjon 29. februar. Akkurat som vi lovet.
+
+Jeg irriterer meg fortsatt over at det tar 2,5 sekunder å få frem forhåndsvisningen av varselbrevet.
+Det endte med at jeg laget [pdftemplater-webservice-docker]() som slår sammen [] og []. Da poster man
+data og en .docx-mal til tjeneste og får tilbake en ferdig formatert pdf. Tjenesten er ikke satt i drift ennå, men når
+den kommer opp er forhåpentligvis ventetiden kortet ned mot 1 sekund.
+
+## Å feile er menneskelig
+Noe vi oppdaget i forbindelse med testkjøring av saksbehandlermodulen er at det er mange dobbeltoppføringer i sak/arkiv systemet.
+Mange, som i helt utrolig mange faktisk. En god del blir automatisk opprettet, men det kan se ut som om duplikatene er
+ besørget av mennesker. Det eneste gode som kom ut av den oppdagelsen var at det ble laget en ny modul 
+som sjekker dobbeltoppføringer og viser en liste over alle som ble funnet.
+Versjon 1.1.0 forbedret det hele med å skrive funnene til en fil og åpne filen i egnet program.
+Det ble laget som CLI-modul for Node og dermed kan man lage snarveger for windowsbrukerene så de kan dobbeltklikke og få listen selv.
+Enklere for de å vedlikeholde, mindre jobb for oss.
+
 ## Oppsummering
+-[MinElev](https://github.com/telemark/minelev)
+-[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Opprettet
+-[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Ferdigstilt
+-[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Publisert til [Docker Hub](https://hub.docker.com/r/telemark/pdftemplater-webservice-docker/)
+-[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Opprettet
+-[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Ferdigstilt
+-[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Publisert til [npm](https://www.npmjs.com/package/p360-duplicate-contacts)
 
 [<- 18. februar 2016](2016-02-18.md)  |  [Forsiden](../../index.md)
