--- a/blog/2016/02/2016-02-18.md
+++ b/blog/2016/02/2016-02-18.md
@@ -1,5 +1,9 @@
 # 18. februar 2016
 
 ## Oppsummering
+-[MinElev](https://github.com/telemark/minelev)
+-[roy](https://github.com/telemark/roy)
+-[tfk-dsf-unwrap-parents](https://github.com/telemark/tfk-dsf-unwrap-parents)
+-[tfk-360-unwrap-contact](https://github.com/telemark/tfk-360-unwrap-contact)
 
 [<- 17. februar 2016](2016-02-17.md)  |  [Forsiden](../../index.md) [19. februar 2016 ->](2016-02-19.md)
