--- a/blog/2016/02/2016-02-19.md
+++ b/blog/2016/02/2016-02-19.md
@@ -1,12 +1,13 @@
 # 19. februar 2016
 
-Siste dag av piloten for [MinElev]() og alt tikker og går som det skal fra vår side.
+Siste dag av piloten for [MinElev](https://github.com/telemark/minelev) og alt tikker og går som det skal fra vår side.
 Ved opptelling etter lunch i dag var 106 varsler sendt ut og over 60% var så langt lest digital hos AltInn.
 Siste finpuss på hjelpetekster og små visuelle tilbakemeldinger ble gjort på grensesnittet.
 Vi mener vi nå er klare til å gå i full produksjon 29. februar. Akkurat som vi lovet.
 
 Jeg irriterer meg fortsatt over at det tar 2,5 sekunder å få frem forhåndsvisningen av varselbrevet.
-Det endte med at jeg laget [pdftemplater-webservice-docker]() som slår sammen [] og []. Da poster man
+Det endte med at jeg laget [pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) som 
+slår sammen [docxtemplater-webservice-docker](https://github.com/telemark/docxtemplater-webservice-docker) og [converttopdf-webservice-docker](https://github.com/telemark/converttopdf-webservice-docker). Da poster man
 data og en .docx-mal til tjeneste og får tilbake en ferdig formatert pdf. Tjenesten er ikke satt i drift ennå, men når
 den kommer opp er forhåpentligvis ventetiden kortet ned mot 1 sekund.
 
@@ -20,12 +21,12 @@ Det ble laget som CLI-modul for Node og dermed kan man lage snarveger for window
 Enklere for de å vedlikeholde, mindre jobb for oss.
 
 ## Oppsummering
--[MinElev](https://github.com/telemark/minelev)
--[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Opprettet
--[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Ferdigstilt
--[pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Publisert til [Docker Hub](https://hub.docker.com/r/telemark/pdftemplater-webservice-docker/)
--[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Opprettet
--[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Ferdigstilt
--[node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Publisert til [npm](https://www.npmjs.com/package/p360-duplicate-contacts)
+- [MinElev](https://github.com/telemark/minelev)
+- [pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Opprettet
+- [pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Ferdigstilt
+- [pdftemplater-webservice-docker](https://github.com/telemark/pdftemplater-webservice-docker) Publisert til [Docker Hub](https://hub.docker.com/r/telemark/pdftemplater-webservice-docker/)
+- [node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Opprettet
+- [node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Ferdigstilt
+- [node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Publisert til [npm](https://www.npmjs.com/package/p360-duplicate-contacts)
 
 [<- 18. februar 2016](2016-02-18.md)  |  [Forsiden](../../index.md)
