--- a/blog/2016/02/2016-02-10.md
+++ b/blog/2016/02/2016-02-10.md
@@ -1,8 +1,8 @@
 # 10. februar 2016
 
 ## Oppsummering
-[tfk-laurentius](https://github.com/telemark/tfk-laurentius) Opprettes
-[node-p360]()
-[node-dsf]()
+- [tfk-laurentius](https://github.com/telemark/tfk-laurentius) Opprettes
+- [node-p360]()
+- [node-dsf]()
 
 [<- 09. februar 2016](2016-02-09.md)  |  [Forsiden](../../index.md) [12. februar 2016 ->](2016-02-12.md)
