--- a/blog/2016/02/2016-02-19.md
+++ b/blog/2016/02/2016-02-19.md
@@ -29,4 +29,4 @@ Enklere for de å vedlikeholde, mindre jobb for oss.
 - [node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Ferdigstilt
 - [node-p360-duplicate-contacts](https://github.com/telemark/node-p360-duplicate-contacts) Publisert til [npm](https://www.npmjs.com/package/p360-duplicate-contacts)
 
-[<- 18. februar 2016](2016-02-18.md)  |  [Forsiden](../../index.md)
+[<- 18. februar 2016](2016-02-18.md)  |  [Forsiden](../../index.md) [22. februar 2016 ->](2016-02-22.md)
