--- a/blog/2016/02/2016-02.md
+++ b/blog/2016/02/2016-02.md
@@ -1,4 +1,6 @@
 # Februar 2016
+- [29. februar 2016](2016-02-29.md)
+- [22. februar 2016](2016-02-22.md)
 - [19. februar 2016](2016-02-19.md)
 - [18. februar 2016](2016-02-18.md)
 - [17. februar 2016](2016-02-17.md)
