--- a/blog/2016/02/2016-02-22.md
+++ b/blog/2016/02/2016-02-22.md
@@ -1,5 +1,7 @@
 # 22. februar 2016
 
 ## Oppsummering
+[p360-duplicate-contacts-electron](https://github.com/telemark/p360-duplicate-contacts-electron) Opprettet
+[p360-duplicate-contacts-electron](https://github.com/telemark/p360-duplicate-contacts-electron) Ferdigstilt
 
 [<- 19. februar 2016](2016-02-19.md)  |  [Forsiden](../../index.md) [29. februar 2016 ->](2016-02-29.md)
