--- a/blog/2016/02/2016-02-29.md
+++ b/blog/2016/02/2016-02-29.md
@@ -1,5 +1,36 @@
 # 29. februar 2016
 
+I dag åpnes [MinElev](https://github.com/telemark/minelev) for alle lærerene ved de videregående skolene til Telemark fylkeskommune.
+Linkene ble lagt ut på portalen og Fronter i går kveld og opplæringsvideoen ble også gjort tilgjengelig.
+Antar noe av dagen i dag går med til å kikke på logger og passe på at alt går riktig for seg. 
+De første lærerne har allerede vært inne ser jeg.
+
+Vi hviler dog ikke på laurbærne: Neste store jobb er allerede plukket ut: [portalen](https://github.com/telemark/portalen)
+Blir mer om den de neste dagene. Her er i stedet en oppsummering av Tfk-varsel/MinElev
+
+## Tfk varsel/MinElev
+Prosjektet fikk Go fra porteføljestyret 18. januar så i perioden 19. januar til i dag har følgende skjedd:
+- 35 moduler og tjenester ble videreutviklet eller nyutviklet
+- 182 timer registrert på prosjektet fra min side
+- 78 timer gikk til ren modul/tjenesteutvikling
+- 69 timer ble brukt på MinElev
+- 35 timer brukte jeg på administrasjon
+- 4 timer dokumentasjon (utover det som ligger i koden)
+
+Læringspunktene jeg spiller tilbake til organisasjonen er
+- Utviklere må inn også i idè/konsept/forfase
+- Det må settes av tid for utviklere også til administrasjon/dokumentasjon i tillegg til utvikling
+- Større buffersone på tid
+- Kommunikasjonsressurser må inn fra dag 1
+Det første punktet kommer av at jeg har registrert 50 timer brukt i forfasen. Men, det var tid jeg ikke var satt opp til å bruke.
+Punkt 2 er litt min egen skyld fordi jeg kun leverte fra meg antatt tidsbruk på utvikling. Tenkte ikke så langt at det ville komme timer til annet også.
+Bufferen kommer av at det ikke er mulig å frita oss 100% fra daglig drift. Det kommer alltid enkelte oppgaver eller annet som må utføres under
+prosjektperioden. Når jeg sier noe tar 16 arbeidsdager så betyr det 6 * 7.5 timer. Alle dager jeg dermed ikke får brukt full tid på
+utvikling spiser av bufferen. Så lærdommen er å finne en god prosentandel man slenger på toppen av timene for å finne leveringsdato.
+Siste punkt er enkelt og greit fordi alle digitaliseringsprosjektene våre innebærer endring og endring krever mye og god kommunikasjon.
+Da jeg så hvor mye enklere det var å være utvikler etter å ha vært med fra starten av ble dette spilt inn til også å omfatte kommunikasjon.
+
 ## Oppsummering
+- [portalen](https://github.com/telemark/portalen) Opprettet
 
 [<- 22. februar 2016](2016-02-22.md)  |  [Forsiden](../../index.md)
