--- a/blog/2016/02/2016-02-29.md
+++ b/blog/2016/02/2016-02-29.md
@@ -33,4 +33,4 @@ Da jeg så hvor mye enklere det var å være utvikler etter å ha vært med fra 
 ## Oppsummering
 - [portalen](https://github.com/telemark/portalen) Opprettet
 
-[<- 22. februar 2016](2016-02-22.md)  |  [Forsiden](../../index.md)
+[<- 22. februar 2016](2016-02-22.md)  |  [Forsiden](../../index.md)  |  [01. mars 2016 ->](../03/2016-03-01.md)
